# claw-toolkit

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/agent-loop/: Cargo.toml
crates/agent-loop/src/: lib.rs
crates/agent-test/: Cargo.toml
crates/agent-test/src/: lib.rs
crates/llm-client/: Cargo.toml
crates/llm-client/src/: lib.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: lib.rs  lifecycle.rs  registry.rs  server.rs
crates/permission-engine/: Cargo.toml
crates/permission-engine/src/: lib.rs
crates/prompt-memory/: Cargo.toml
crates/prompt-memory/src/: lib.rs
crates/safe-fs/: Cargo.toml
crates/safe-fs/src/: lib.rs  operations.rs  validators.rs
crates/session-store/: Cargo.toml
crates/session-store/src/: lib.rs
crates/sse-parser/: Cargo.toml
crates/sse-parser/src/: lib.rs
crates/tool-hooks/: Cargo.toml
crates/tool-hooks/src/: lib.rs
