[package]
name = "agent-loop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Core agentic loop framework: user input → LLM → tool execution → repeat"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
llm-client = { path = "../llm-client" }
tool-hooks = { path = "../tool-hooks" }
permission-engine = { path = "../permission-engine" }
session-store = { path = "../session-store" }
prompt-memory = { path = "../prompt-memory" }
