[package]
name = "agent-test"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Deterministic testing framework for AI agent behavior"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
llm-client = { path = "../llm-client" }
agent-loop = { path = "../agent-loop" }
permission-engine = { path = "../permission-engine" }
tool-hooks = { path = "../tool-hooks" }
session-store = { path = "../session-store" }
