[package]
name = "llm-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Unified LLM client supporting Anthropic and OpenAI-compatible APIs with streaming"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sse-parser = { path = "../sse-parser" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
