[package]
name = "mcp-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Model Context Protocol (MCP) client SDK with stdio and HTTP transports"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
