[package]
name = "prompt-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Instruction file discovery, git context injection, and system prompt assembly for AI agents"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
