[package]
name = "session-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "AI conversation session management with JSONL persistence and automatic compaction"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
